# mindrig

./: .gitignore  .gitmodules  .prettierignore  AGENTS.bak.md  AGENTS.bak2.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  fnox.toml  mindrig.code-workspace  mise.toml  models.dev.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vitest.config.ts  wrkspc.code-workspace
.agents/jobs/: fixer.md  plan-execution.md  plan-generation.md  plan-steps-generation.md
.claude/: settings.local.json
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: initialize.sh  on-update.sh  post-create.sh  post-start.sh
.github/workflows/: build-extension.yml  package-extension.yml
agents/: executor.md  planner.md
agents/jobs/: plan-execution.md  plan-generation.md  plan-review.md  plan-steps-generation.md
docs/architecture/: assessment-module.md  messages.md  playground-state-resolve.md  server-client-responsibilities.md  (+1 more)
parser/: Cargo.toml  package.json  turbo.json
parser/pkg/: package.json
parser/scripts/: build.sh
parser/specs/: 000-index.md  001-parsing.md
parser/src/: comment.rs  lib.rs  py.rs  test.rs  ts.rs
parser/tests/: wasm.rs
scripts/: _env.sh  agent-shell.sh  env-vars.sh  pkg-test-unit.sh  pkg-types.sh  secrets-reencrypt.sh  setup-codex.sh  setup-macos.sh  setup-vsc.sh  update-dotfiles.sh  worktree.sh
specs/: 000-index.md  001-shared-types.md
types/: genotype.toml  package.json  turbo.json
vscode/: CHANGELOG.md  package.json  pnpm-lock.yaml  test.css  tsconfig.json  vite.config.ts
(+942 files in other folders)
